--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
 <div class="container main">
 <div class="row">
 	<div class="four columns portfolio image-space">
-		<img src="images/derrik.jpg"/>
+		<img src="images/team/derrik.jpg"/>
 	    <h4>Derrik Willis <br>Partner Projects Man</br></h4>
 				<div class="about-align"><!--DO NOT REMOVE THIS - THIS KEEPS IT ALL ALIGNED-->
 	        <p class="about-text">
@@ -84,7 +84,7 @@
 				</div>
 		</div>
 	<div class="four columns portfolio image-space">
-		<img src="images/mike.jpg"/>
+		<img src="images/team/mike.jpg"/>
     <h4>Mike Tissier <br>Owner</br></h4>
       <p class="about-text">
 					Mike was the youngest station dealer in Shell's history. In 1972, at age 21,
@@ -100,7 +100,7 @@
 
 	<div class="row">
 		<div class="four columns portfolio image-space">
-			<img src="images/james.jpg"/>
+			<img src="images/team/james.jpg"/>
 	      <h4>James "Bub" Staley <br>Crew Man<br></h4>
 	      <p class="about-text">
 					"Bub" has more than 25 years experience Re-Branding gas stations coast to coast.
@@ -108,21 +108,21 @@
 				</p>
 			</div>
     <div class="four columns portfolio image-space">
-        <img src="images/steve.jpg"/>
+        <img src="images/team/steve.jpg"/>
         <h4>Steve Sites<br>On Site Man</br></h4>
 				<p class="about-text-small">
 				Steve has more than 20 years of experience in the petroleum industry service business.
 				</p>
 		</div>
 		<div class="four columns portfolio image-space  ">
-			<img src="images/valeie.jpg"/>
+			<img src="images/team/valeie.jpg"/>
       <h4>Valerie Zanni<br>Office Coordinator</br></h4>
 			<p class="about-text-small">
 				Valerie worked for the state of Connecticut for more than 22 years, organizing projects in different areas.
 			</p>
 		</div>
 		<div class="four columns portfolio image-space ">
-			<img src="images/tim.jpg"/>
+			<img src="images/team/tim.jpg"/>
 			<h4>Tim Ruff<br>Sign Crew</br></h4>
 			<p class="about-text-small">
 				Tim has more than 6 years of experience in the petroleum industry service business.
@@ -130,14 +130,14 @@
 		</div>
 </div>
 	<div class="four columns portfolio image-space ">
-			<img src="images/ken.jpg"/>
+			<img src="images/team/ken.jpg"/>
       <h4>Ken Daly<br>Painting Crew</br></h4>
       <p class="about-text-small">
 				Ken has more than 30 years experience in the construction industry and is an all around construction and painting expert.
 			</p>
 		</div>
 		<div class="four columns portfolio image-space ">
-			<img src="images/marilyn.jpg"/>
+			<img src="images/team/marilyn.jpg"/>
       <h4>Marilyn Price<br>Permit Specialist</br></h4>
       <p class="about-text-small">
 				Marilyn is our permit specialist with over 25 years experience pulling permits in Florida.
