--- a/work.html
+++ b/work.html
@@ -59,11 +59,11 @@
 	<div class="row">
 
 		<div class="six columns portfolio">
-			<img src="images/before_after/w1.jpg"/>
+			<img src="images/work/before/before_1.jpg"/>
 			<p>Before</p>
 		</div>
 		<div class="six columns portfolio">
-			<img src="images/before_after/w2.jpg"/>
+			<img src="images/work/after/after_1.jpg"/>
 			<p>
 			After
 			</p>
@@ -72,13 +72,13 @@
 
 	<div class="row">
 		<div class="six columns portfolio">
-			<img src="images/before_after/w3.jpg"/>
+			<img src="images/work/before/before_2.jpg"/>
 		<p>
 			Before
 		</p>
 		</div>
 		<div class="six columns portfolio">
-			<img src="images/before_after/w4.jpg"/>
+			<img src="images/work/after/after_2.jpg"/>
 			<p>
 			After
 			</p>
@@ -87,10 +87,10 @@
 
 	<div class="row">
 		<div class="six columns portfolio">
-			<img src="images/before_after/w5.jpg"/>
+			<img src="images/work/before/before_3.jpg"/>
 		</div>
 		<div class="six columns portfolio">
-			<img src="images/before_after/w6.jpg"/>
+			<img src="images/work/after/after_3.jpg"/>
 		</div>
 	</div>
 
