move homepage images into its own directory

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 	<div class="row">
 		<div class="container">
 			<div class="twelve columns">
-					<img src="images/h1.jpg" alt="gas station" style="width: %"/>
+					<img src="images/home/h1.jpg" alt="gas station" style="width: %"/>
 			</div>
 		</div>
 	</div>
@@ -111,14 +111,14 @@
 		<div class="container">
 			<div class="six columns">
 				<div>
-					<img src="images/h2.jpg" alt="gas station"/>
+					<img src="images/home/h2.jpg" alt="gas station"/>
 				</div>
 			</div>
 			<div class="two columns" style="text-align: center; font-size: 1.5em;">
 
 			</div>
 			<div class="six columns">
-				<img src="images/h3.jpg" alt="gas station"/>
+				<img src="images/home/h3.jpg" alt="gas station"/>
 			</div>
 		</div>
 	</div>
