--- a/contact.html
+++ b/contact.html
@@ -60,51 +60,65 @@
 			<p class="footer">
 		</div>
 	</div>
-    <div class="row">
-        <div class="contact">
-            <form>
-													<div id="form-container">
-                <div class="row test-form">
-                    <div class="six columns ">
 
-                      <label for="exampleRecipientInput">Your Name</label>
-                  <input class="u-full-width" type="text" placeholder="Full Name" id="exampleRecipientInput">
-                        <!--<input class="light-field" type="text" placeholder="Full Name">-->
-                    </div>
-                    <div class="six columns">
-                      <label for="exampleEmailInput">Your Email</label>
-                      <input class="u-full-width" type="email" placeholder="test@mailbox.com" id="exampleEmailInput">
-                    </div>
-                    <br>
-                    <div class="six columns"></div><label for="exampleMessage">Message</label>
-                   <textarea class="u-full-width" type="text" placeholder="Hello!" id="exampleMessage"></textarea>
-                  <div id="btn-container">
-																	<input class="button-primary btn-text"  type="submit" value="Submit" style="align-content: center">
-                </div>
+<!--Contact Form
+----------------------------------------------------------------------------------->
+  <section>
+    <form>
 
-            </form>
-        </div>
-    </div>
-    <footer>
-        <div class="container">
-            <div class="row twelve columns">
-							<div id="footer-container2">
-
-								<h2 class="footer">ReBrandit, LLC</h2>
-
-										<p>Proud Member of the FPMA</p>
-
-										<p>
-											<strong style="color: red";>"MAKING YOU MONEY IS OUR BUSINESS"</strong><br>
-											12811 Kenwood Ln. STE 209,  Ft. Myers, FL 33907 <br>  Phone: <a href="tel:2398874418">239-887-4418</a> | <a href="tel:8004823460">(800)-482-3460</a><br>
-											Fax: 239-887-4363 <br> email: <a href="mailto:mike@rebrand-it.com">mike@rebrand-it.com</a>
-										</p>
-										<p class="copyright"><br>&copy; 2018 ReBrandit, LLC All Rights Reserved.</p>
-
-							</div>
+      <div class="row">
+        <div id="form-container" class="container">
+          <!--<div class="row test-form">-->
+            <div>
+              <label for="exampleRecipientInput">Your Name</label>
+              <input class="u-full-width" type="text" placeholder="Full Name" id="exampleRecipientInput">
+              <!--<input class="light-field" type="text" placeholder="Full Name">-->
             </div>
+
+            <div>
+              <label for="exampleEmailInput">Your Email</label>
+              <input class="u-full-width" type="email" placeholder="test@mailbox.com" id="exampleEmailInput">
+            </div>
+            <br>
+
+            <div>
+              <label for="exampleMessage">Message</label>
+              <textarea class="u-full-width" type="text" placeholder="Hello!" id="exampleMessage"></textarea>
+            </div>
+
+            <div id="btn-container">
+              <input class="button-primary btn-text"  type="submit" value="Submit" style="align-content: center">
+            </div>
+            <!--</div>-->
+          </div>
         </div>
-    </footer>
+
+      </form>
+    </section>
+
+<!--Footer
+----------------------------------------------------------------------------------->
+  <footer>
+      <div class="container">
+          <div id="footer-container2" class="row twelve columns">
+						<h2 class="footer">ReBrandit, LLC</h2>
+
+								<p>Proud Member of the FPMA</p>
+
+								<p>
+									<strong style="color: red";>"MAKING YOU MONEY IS OUR BUSINESS"</strong><br>
+									12811 Kenwood Ln. STE 209,  Ft. Myers, FL 33907 <br>  Phone: <a href="tel:2398874418">239-887-4418</a> | <a href="tel:8004823460">(800)-482-3460</a><br>
+									Fax: 239-887-4363 <br> email: <a href="mailto:mike@rebrand-it.com">mike@rebrand-it.com</a>
+								</p>
+								<p class="copyright"><br>&copy; 2018 ReBrandit, LLC All Rights Reserved.</p>
+          </div>
+      </div>
+  </footer>
+
+<!--Scripts
+----------------------------------------------------------------------------------->
+
+
 <script src="scripts/jquery.magnific-popup.js"></script>
 <script type="text/javascript">
 	$('.image-link').magnificPopup({
