Change Employee Title Spacing

--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
 <div class="row">
 	<div class="four columns portfolio image-space">
 		<img src="images/derrik.jpg"/>
-	    <h4>Derrik Willis <br>Partner Projects Man</br></h4>
+	    <h4>Derrik Willis<br><span>Partner & Projects Manager</span></h4>
 				<div class="about-align"><!--DO NOT REMOVE THIS - THIS KEEPS IT ALL ALIGNED-->
 	        <p class="about-text">
 						Derrik is instrumental in the development of ReBrandit,LLC.
@@ -101,7 +101,7 @@
 	<div class="row">
 		<div class="four columns portfolio image-space">
 			<img src="images/james.jpg"/>
-	      <h4>James "Bub" Staley <br>Crew Man<br></h4>
+	      <h4>James "Bub" Staley <br>Crew Manager<br></h4>
 	      <p class="about-text">
 					"Bub" has more than 25 years experience Re-Branding gas stations coast to coast.
 					He is proficient in all aspects of gas station installation and retrofitting; Canopies, MID Signs to car washes.
@@ -109,7 +109,7 @@
 			</div>
     <div class="four columns portfolio image-space">
         <img src="images/steve.jpg"/>
-        <h4>Steve Sites<br>On Site Man</br></h4>
+        <h4>Steve Sites<br>OnSite </br></h4>
 				<p class="about-text-small">
 				Steve has more than 20 years of experience in the petroleum industry service business.
 				</p>
