--- a/work.html
+++ b/work.html
@@ -59,38 +59,32 @@
 	<div class="row">
 
 		<div class="six columns portfolio">
-			<img src="images/work/before/before_1.jpg"/>
+			<img src="images/work/after/after_1.jpg"/>
 			<p>Before</p>
 		</div>
 		<div class="six columns portfolio">
-			<img src="images/work/after/after_1.jpg"/>
-			<p>
-			After
-			</p>
+			<img src="images/work/before/before_1.jpg"/>
+			<p>After</p>
 		</div>
 	</div>
 
 	<div class="row">
-		<div class="six columns portfolio">
-			<img src="images/work/before/before_2.jpg"/>
-		<p>
-			Before
-		</p>
-		</div>
 		<div class="six columns portfolio">
 			<img src="images/work/after/after_2.jpg"/>
-			<p>
-			After
-			</p>
+			<p>Before</p>
+		</div>
+		<div class="six columns portfolio">
+			<img src="images/work/before/before_2.jpg"/>
+			<p>After</p>
 		</div>
 	</div>
 
 	<div class="row">
 		<div class="six columns portfolio">
-			<img src="images/work/before/before_3.jpg"/>
+			<img src="images/work/after/after_3.jpg"/>
 		</div>
 		<div class="six columns portfolio">
-			<img src="images/work/after/after_3.jpg"/>
+			<img src="images/work/before/before_3.jpg"/>
 		</div>
 	</div>
 
