--- a/about.html
+++ b/about.html
@@ -109,7 +109,7 @@
 			</div>
     <div class="four columns portfolio image-space">
         <img src="images/steve.jpg"/>
-        <h4>Steve Sites<br>OnSite </br></h4>
+        <h4>Steve Sites<br>OnSite Manager </br></h4>
 				<p class="about-text-small">
 				Steve has more than 20 years of experience in the petroleum industry service business.
 				</p>
@@ -129,13 +129,7 @@
 			</p>
 		</div>
 </div>
-	<div class="four columns portfolio image-space ">
-			<img src="images/ken.jpg"/>
-      <h4>Ken Daly<br>Painting Crew</br></h4>
-      <p class="about-text-small">
-				Ken has more than 30 years experience in the construction industry and is an all around construction and painting expert.
-			</p>
-		</div>
+	
 		<div class="four columns portfolio image-space ">
 			<img src="images/marilyn.jpg"/>
       <h4>Marilyn Price<br>Permit Specialist</br></h4>
