--- a/about.html
+++ b/about.html
@@ -108,13 +108,8 @@
 				</p>
 			</div>
     <div class="four columns portfolio image-space">
-<<<<<<< HEAD
-        <img src="images/team/steve.jpg"/>
-        <h4>Steve Sites<br>On Site Man</br></h4>
-=======
         <img src="images/steve.jpg"/>
-        <h4>Steve Sites<br>OnSite Manager </br></h4>
->>>>>>> c7f93584dbc96507202f6cd758610390a0f42c3d
+        <h4>Steve Sites<br>On-Site Manager</br></h4>
 				<p class="about-text-small">
 				Steve has more than 20 years of experience in the petroleum industry service business.
 				</p>
@@ -134,17 +129,6 @@
 			</p>
 		</div>
 </div>
-<<<<<<< HEAD
-	<div class="four columns portfolio image-space ">
-			<img src="images/team/ken.jpg"/>
-      <h4>Ken Daly<br>Painting Crew</br></h4>
-      <p class="about-text-small">
-				Ken has more than 30 years experience in the construction industry and is an all around construction and painting expert.
-			</p>
-		</div>
-=======
-	
->>>>>>> c7f93584dbc96507202f6cd758610390a0f42c3d
 		<div class="four columns portfolio image-space ">
 			<img src="images/team/marilyn.jpg"/>
       <h4>Marilyn Price<br>Permit Specialist</br></h4>
