fix steve img path

--- a/about.html
+++ b/about.html
@@ -108,7 +108,7 @@
 				</p>
 			</div>
     <div class="four columns portfolio image-space">
-        <img src="images/steve.jpg"/>
+        <img src="images/team/steve.jpg"/>
         <h4>Steve Sites<br>On-Site Manager</br></h4>
 				<p class="about-text-small">
 				Steve has more than 20 years of experience in the petroleum industry service business.
