adjust logo images patsh

--- a/work.html
+++ b/work.html
@@ -49,7 +49,7 @@
 	<div class="row">
 		<div class="container">
 			<div class="twelve columns">
-				<a href="index.html" class="logo"><img src="images/logo.jpg" alt="Rebrandit Logo" class="logo"></a>
+				<a href="index.html" class="logo"><img src="images/logo.png" alt="Rebrandit Logo" class="logo"></a>
 		<p style="color: blue;text-align: center;font-size: 25px;font-family: 'Roboto', sans-serif;letter-spacing: 1px;">When It's Time to Change Your Image  </p>
 			</div>
 		</div>
