--- a/about.html
+++ b/about.html
@@ -101,7 +101,7 @@
 	<div class="row">
 		<div class="four columns portfolio image-space">
 			<img src="images/team/james.jpg"/>
-	      <h4>James "Bub" Staley <br>Crew Man<br></h4>
+	      <h4>James "Bub" Staley <br>Crew Manager<br></h4>
 	      <p class="about-text">
 					"Bub" has more than 25 years experience Re-Branding gas stations coast to coast.
 					He is proficient in all aspects of gas station installation and retrofitting; Canopies, MID Signs to car washes.
