--- a/work.html
+++ b/work.html
@@ -22,14 +22,19 @@
 	integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
 	crossorigin="anonymous">
 	<link rel="stylesheet" href="css/magnific-popup.css">
-
+<link rel="stylesheet" href="css/hamburger.css">
 <!-- Scripts
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-
+ <script src="scripts/hamburger.js"></script>
 <!-- Favicon
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 </head>
+
+
+
+
+
 
 <body>
 	<header class="main_nav">
@@ -45,6 +50,21 @@
 			</div>
 		</div>
 	</header>
+<header>
+	
+  <button class="hamburger">&#9776;</button>
+  <button class="cross">&#735;</button>
+</header>
+
+<div class="menu">
+  <ul>
+    <a href="index.html"><li>Home</li></a>
+    <a href="about.html"><li>About</li></a>
+    <a href="contact.html"><li>Contact</li></a>
+    <a href="work.html"><li>Work</li></a>
+    
+  </ul>
+</div> 
 
 	<div class="row">
 		<div class="container">
