Replace Images Center Form

--- a/contact.html
+++ b/contact.html
@@ -128,7 +128,7 @@
 									12811 Kenwood Ln. STE 209,  Ft. Myers, FL 33907 <br>  Phone: <a href="tel:2398874418">239-887-4418</a> | <a href="tel:8004823460">(800)-482-3460</a><br>
 									Fax: 239-887-4363 <br> email: <a href="mailto:mike@rebrand-it.com">mike@rebrand-it.com</a>
 								</p>
-								<p class="copyright"><br>&copy; 2018 ReBrandit, LLC All Rights Reserved.</p>
+								<p class="copyright"><br>&copy; <script language="JavaScript" type="text/javascript">document.write((new Date()).getFullYear());</script> ReBrandit, LLC All Rights Reserved.</p>
           </div>
       </div>
   </footer>
