--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 	        Fax: 239-887-4363 <br> Email: <a href="mailto:mike@rebrand-it.com">mike@rebrand-it.com</a></p>
 			</div>
 			<div class="row twelve columns">
-				<p class="copyright">&copy; 2018 ReBrandit, LLC All Rights Reserved.</p>
+				<p class="copyright">&copy; <script language="JavaScript" type="text/javascript">document.write((new Date()).getFullYear());</script> ReBrandit, LLC All Rights Reserved.</p>
 			</div>
 		</div>
 	</footer>
