--- a/about.html
+++ b/about.html
@@ -91,7 +91,7 @@
 <div class="container main">
 <div class="row">
 	<div class="four columns portfolio image-space">
-		<img src="images/team/derrik.jpg"/>
+     <picture><img src="images/compressed/derrik-min.jpg"/></picture>
 	    <h4>Derrik Willis<br><span>Partner & Projects Manager</span></h4>
 				<div class="about-align"><!--DO NOT REMOVE THIS - THIS KEEPS IT ALL ALIGNED-->
 	        <p class="about-text">
@@ -107,7 +107,7 @@
 				</div>
 		</div>
 	<div class="four columns portfolio image-space">
-		<img src="images/team/mike.jpg"/>
+     <picture><img src="images/compressed/mike-min.jpg"/></picture>
     <h4>Mike Tissier <br>Owner</br></h4>
       <p class="about-text">
 					Mike was the youngest station dealer in Shell's history. In 1972, at age 21,
@@ -123,38 +123,38 @@
 
 	<div class="row">
 		<div class="four columns portfolio image-space">
-			<img src="images/team/james.jpg"/>
-	      <h4>James "Bub" Staley <br>Crew Manager<br></h4>
+      <picture><img src="images/compressed/james-min.jpg"/></picture>
+	      <h4>James "Bub" Staley <br>Crew Manager</h4>
 	      <p class="about-text">
 					"Bub" has more than 25 years experience Re-Branding gas stations coast to coast.
 					He is proficient in all aspects of gas station installation and retrofitting; Canopies, MID Signs to car washes.
 				</p>
 			</div>
     <div class="four columns portfolio image-space">
-        <img src="images/team/steve.jpg"/>
-        <h4>Steve Sites<br>On Site Manager</br></h4>
+        <picture><img src="images/compressed/steve-min.jpg"/></picture>
+        <h4>Steve Sites<br>On Site Manager</h4>
 				<p class="about-text-small">
 				Steve has more than 20 years of experience in the petroleum industry service business.
 				</p>
 		</div>
-		<div class="four columns portfolio image-space  ">
-			<img src="images/team/valeie.jpg"/>
-      <h4>Valerie Zanni<br>Office Coordinator</br></h4>
+		<div class="four columns portfolio image-space">
+      <picture><img src="images/compressed/valeie-min.jpg"/></picture>
+      <h4>Valerie Zanni<br>Office Coordinator</h4>
 			<p class="about-text-small">
 				Valerie worked for the state of Connecticut for more than 22 years, organizing projects in different areas.
 			</p>
 		</div>
-		<div class="four columns portfolio image-space ">
-			<img src="images/team/tim.jpg"/>
-			<h4>Tim Ruff<br>Sign Crew</br></h4>
+		<div class="four columns portfolio image-space">
+      <picture><img src="images/compressed/tim-min.jpg"/></picture>
+			<h4>Tim Ruff<br>Sign Crew</h4>
 			<p class="about-text-small">
 				Tim has more than 6 years of experience in the petroleum industry service business.
 			</p>
 		</div>
 </div>
-		<div class="four columns portfolio image-space ">
-			<img src="images/team/marilyn.jpg"/>
-      <h4>Marilyn Price<br>Permit Specialist</br></h4>
+		<div class="four columns portfolio image-space">
+      <picture><img src="images/compressed/marilyn-min.jpg"/></picture>
+      <h4>Marilyn Price<br>Permit Specialist</h4>
       <p class="about-text-small">
 				Marilyn is our permit specialist with over 25 years experience pulling permits in Florida.
 			</p>
@@ -170,10 +170,9 @@
 		        <p>Proud Member of the FPMA</p>
 		        <strong style="color: red;">"MAKING YOU MONEY IS OUR BUSINESS"</strong><br>12811 Kenwood Ln. STE 209,  Ft. Myers, FL 33907 <br> Phone: <a href="tel:2398874418">239-887-4418</a> | <a href="tel:8004823460">(800)-482-3460</a><br>
 		        Fax: 239-887-4363 <br> email: <a href="mailto:mike@rebrand-it.com">mike@rebrand-it.com</a>
-					</p>
 			</div>
 			<div class="row twelve columns">
-				<p class="copyright">&copy; 2018 ReBrandit, LLC All Rights Reserved.</p>
+				<p class="copyright">&copy; <script language="JavaScript" type="text/javascript">document.write((new Date()).getFullYear());</script> ReBrandit, LLC All Rights Reserved.</p>
 			</div>
 		</div>
 	</footer>
