--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			</div>
 		</div>
 	</header>
-<header>
+<!--<header>
 	
   <button class="hamburger">&#9776;</button>
   <button class="cross">&#735;</button>
@@ -65,7 +65,7 @@
     
   </ul>
 </div> 
-
+-->
 	<div class="row">
 		<div class="container">
 			<div class="twelve columns">
@@ -87,7 +87,7 @@
 			</div>-->
 			<div class="leftlist">
 				<div class="six columns list-container">
-					<ul class="services_l serv_left">
+					<ul class="list-text-align-left">
 						<li>I.D Sign Change</li>
 						<li>LED Pricers </li>
 						<li>Fascia Installs</li>
@@ -97,9 +97,16 @@
 					</ul>
 				</div>
 			</div>
+			<div class="row">
+				<div class="container">
+						<div class="twelve columns home-img">
+								<img src="images/home/h1.jpg" alt="gas station"/>
+						</div>
+				</div>
+			</div>
 			<div class="rightlist">
 				<div class="six columns list-container">
-					<ul class="services_r serv_right">
+					<ul class="list-text-alignleft">
 						<li>Curb Repair</li>
 						<li>Light Service</li>
 						<li>Canopy Repair</li>
@@ -115,13 +122,7 @@
 
 <section class="main-display">
 
-	<div class="row">
-		<div class="container">
-			<div class="twelve columns home-img">
-					<img src="images/home/h1.jpg" alt="gas station" style="width: %"/>
-			</div>
-		</div>
-	</div>
+	
 
 	<div class="row">
 		<div class="container">
